--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         class="text-gray-300 hover:text-indigo-400 transition font-medium">Lebenslauf</a>
                     <a href="#projekte" class="text-gray-300 hover:text-indigo-400 transition font-medium">Projekte</a>
                     <a href="#skills" class="text-gray-300 hover:text-indigo-400 transition font-medium">Skills</a>
+                    <a href="#documents" class="text-gray-300 hover:text-indigo-400 transition font-medium">Dokumente</a>
                     <a href="#kontakt" class="text-gray-300 hover:text-indigo-400 transition font-medium">Kontakt</a>
+
                 </div>
                 <button class="md:hidden text-gray-300" id="mobile-menu-btn">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -739,20 +741,60 @@
 
                         <div class="flex items-center justify-between">
                             <div class="flex items-center gap-3">
-                                
+
                                 <span class="text-gray-300">English</span>
                             </div>
                             <div class="flex text-teal-400 text-lg tracking-wider">C1</div>
                         </div>
-
-
-
-
-
                     </div>
-
-
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Dokumente & Nachweise -->
+    <section id="documents" class="py-20 bg-slate-900 border-t border-slate-800">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="text-center mb-16">
+                <h2 class="text-4xl md:text-5xl font-bold mb-4 text-white">
+                    Dokumente
+                </h2>
+                <p class="text-gray-400 text-lg max-w-2xl mx-auto">
+                    Zeugnisse & Praktikumsbewertungen
+                </p>
+                <div class="w-20 h-1 bg-gradient-to-r from-indigo-500 to-purple-500 mx-auto mt-4 rounded-full"></div>
+            </div>
+
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+                <!-- Dokument -->
+                <a href="./static/documents/bfw_zeugnis.pdf" download
+                    class="p-6 rounded-xl bg-slate-800/50 border border-slate-700 hover:border-indigo-500 hover:bg-slate-800 transition shadow-lg block">
+                    <div class="text-3xl mb-3 text-indigo-400">📄</div>
+                    <h3 class="text-lg font-semibold text-white">Berufsförderungswerk Zeugnis</h3>
+                    <p class="text-gray-400 text-sm">PDF herunterladen</p>
+                </a>
+
+                <a href="./static/documents/ihk_zeugnis.pdf" download
+                    class="p-6 rounded-xl bg-slate-800/50 border border-slate-700 hover:border-indigo-500 hover:bg-slate-800 transition shadow-lg block">
+                    <div class="text-3xl mb-3 text-indigo-400">📄</div>
+                    <h3 class="text-lg font-semibold text-white">IHK Zeugnis</h3>
+                    <p class="text-gray-400 text-sm">PDF herunterladen</p>
+                </a>
+
+                <a href="./static/documents/Praktikumszeugnis_JP.pdf" download
+                    class="p-6 rounded-xl bg-slate-800/50 border border-slate-700 hover:border-indigo-500 hover:bg-slate-800 transition shadow-lg block">
+                    <div class="text-3xl mb-3 text-indigo-400">📄</div>
+                    <h3 class="text-lg font-semibold text-white">Praktikumsbewertung</h3>
+                    <p class="text-gray-400 text-sm">PDF herunterladen</p>
+                </a>
+
+                 <a href="./static/documents/Zeugnis.pdf" download
+                    class="p-6 rounded-xl bg-slate-800/50 border border-slate-700 hover:border-indigo-500 hover:bg-slate-800 transition shadow-lg block">
+                    <div class="text-3xl mb-3 text-indigo-400">📄</div>
+                    <h3 class="text-lg font-semibold text-white">Schulzeugnis</h3>
+                    <p class="text-gray-400 text-sm">PDF herunterladen</p>
+                </a>
 
             </div>
         </div>
