--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
                 <div class="space-y-4">
                     <div>
                         <p class="text-white font-medium">Berufs­förderungswerk Hamburg <span class="text-gray-400">|
-                                2023–2025</span></p>
+                                Jan. 2023– Jan.2025</span></p>
                         <p class="text-gray-400 text-sm">Ausbildung zum Fachinformatiker – Anwendungsentwicklung</p>
                     </div>
                     <div>
                         <p class="text-white font-medium">Technische Universität Hamburg-Harburg <span
-                                class="text-gray-400">| 2013–2017</span></p>
+                                class="text-gray-400">| Oct. 2013– Oct. 2017</span></p>
                         <p class="text-gray-400 text-sm">Computational Informatics (B.Sc., ohne Abschluss)</p>
                     </div>
                     <div>
                         <p class="text-white font-medium">Universität Hamburg <span class="text-gray-400">|
-                                2010–2012</span></p>
+                                Oct. 2010– Oct. 2012</span></p>
                         <p class="text-gray-400 text-sm">Chemie (B.Sc., ohne Abschluss)</p>
                     </div>
                     <div>
                         <p class="text-white font-medium">Gymnasium Meckelfeld <span class="text-gray-400">|
-                                2001–2010</span></p>
+                                2001–May 2010</span></p>
                         <p class="text-gray-400 text-sm">Abitur</p>
                     </div>
                 </div>
@@ -155,26 +155,26 @@
                 <h3 class="text-2xl font-semibold text-indigo-400 mb-4">Berufserfahrung</h3>
                 <div class="space-y-6">
                     <div>
-                        <p class="text-white font-medium">Bergwerk.io <span class="text-gray-400">| 2025–Heute</span>
+                        <p class="text-white font-medium">Bergwerk.io <span class="text-gray-400">| Feb. 2025–Heute</span>
                         </p>
                         <p class="text-gray-400 text-sm">Softwareentwickler</p>
                     </div>
                     <div>
-                        <p class="text-white font-medium">Bergwerk.io <span class="text-gray-400">| 2024</span></p>
+                        <p class="text-white font-medium">Bergwerk.io <span class="text-gray-400">| Jan. 2024 - June 2024</span></p>
                         <p class="text-gray-400 text-sm">
                             6-monatiges Praktikum in der Anwendungsentwicklung (React, Java, Python, GO, Elixir, Docker,
                             Kubernetes)
                         </p>
                     </div>
                     <div>
-                        <p class="text-white font-medium">Hipsydruck <span class="text-gray-400">| 2020–2022</span></p>
+                        <p class="text-white font-medium">Hipsydruck <span class="text-gray-400">| March 2020– Dec. 2022</span></p>
                         <p class="text-gray-400 text-sm">
                             Technischer Produktionsassistent – Planung, Maschinenbedienung, Qualitätsprüfung
                         </p>
                     </div>
                     <div>
                         <p class="text-white font-medium">Freundeskreis Ochsenzoll <span class="text-gray-400">|
-                                2018–2019</span></p>
+                                Feb. 2018– Dec. 2019</span></p>
                         <p class="text-gray-400 text-sm">Medizinisch-Berufliche Rehabilitation</p>
                     </div>
                 </div>
